--- a/app/src/main/res/layout/fragment_bookings.xml
+++ b/app/src/main/res/layout/fragment_bookings.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background_body"
-    tools:context=".ui.book.BookingsFragment">
+    tools:context=".ui.fragments.BookingsFragment">
 
     <RelativeLayout
         android:layout_width="match_parent"
