--- a/app/src/main/res/layout/fragment_contact.xml
+++ b/app/src/main/res/layout/fragment_contact.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background_body"
-    tools:context=".ui.contact.ContactFragment">
+    tools:context=".ui.fragments.ContactFragment">
 
     <TextView
         android:layout_width="match_parent"
