--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -6,39 +6,21 @@
     android:layout_height="match_parent"
     android:background="#FFFFFF"
     android:orientation="vertical"
-    tools:context=".ui.profile.ProfileFragment">
-
-    <androidx.coordinatorlayout.widget.CoordinatorLayout
-        android:layout_width="match_parent"
-        android:layout_height="275dp">
-
-        <ImageView
-            android:id="@+id/profileHeader"
-            android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:background="@color/colorPrimary"
-            android:elevation="4dp" />
-
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/profilePhoto"
-            android:layout_width="125dp"
-            android:layout_height="125dp"
-            android:layout_below="@+id/profileHeader"
-            android:layout_centerHorizontal="true"
-            android:elevation="6dp"
-            android:src="@drawable/placeholder_header_user_dp"
-            app:layout_anchor="@+id/profileHeader"
-            app:layout_anchorGravity="bottom|center" />
-
-    </androidx.coordinatorlayout.widget.CoordinatorLayout>
+    tools:context=".ui.fragments.ProfileFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
+        android:layout_margin="16dp"
         android:orientation="vertical">
+
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/profilePhoto"
+            android:layout_width="115dp"
+            android:layout_height="115dp"
+            android:layout_gravity="center"
+            android:layout_marginBottom="8dp"
+            android:src="@drawable/placeholder_header_user_dp" />
 
         <TextView
             android:layout_width="match_parent"
@@ -75,11 +57,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:tabBackground="@color/colorPrimary"
-            app:tabIndicatorColor="#99121212"
+            app:tabIndicatorColor="#FFFFFF"
             app:tabIndicatorHeight="6dp"
-            app:tabSelectedTextColor="@color/textColor"
+            app:tabSelectedTextColor="#FFFFFF"
             app:tabTextAppearance="@style/TabTextAppearance"
-            app:tabTextColor="#99121212">
+            app:tabTextColor="#99FFFFFF">
 
             <com.google.android.material.tabs.TabItem
                 android:layout_width="wrap_content"
