--- a/app/src/main/res/layout/fragment_rentals.xml
+++ b/app/src/main/res/layout/fragment_rentals.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.rent.RentFragment">
+    tools:context=".ui.fragments.RentFragment">
 
     <TextView
         android:layout_width="match_parent"
