--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -2,17 +2,17 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/navigation_book"
+        android:id="@+id/nav_book"
         android:icon="@drawable/ic_menu_book"
         android:title="@string/title_book" />
 
     <item
-        android:id="@+id/navigation_rent"
+        android:id="@+id/nav_rent"
         android:icon="@drawable/ic_menu_rent"
         android:title="@string/title_rent" />
 
     <item
-        android:id="@+id/navigation_schedule"
+        android:id="@+id/nav_schedule"
         android:icon="@drawable/ic_menu_schedule"
         android:title="@string/title_schedule" />
 
