--- a/app/src/main/res/menu/nav_drawer_header_admin.xml
+++ b/app/src/main/res/menu/nav_drawer_header_admin.xml
@@ -10,23 +10,19 @@
         <item
             android:id="@+id/nav_home"
             android:icon="@drawable/ic_menu_home"
-            android:title="@string/menu_home" />
-        <item
-            android:id="@+id/nav_profile"
-            android:icon="@drawable/ic_menu_profile"
-            android:title="@string/menu_profile" />
+            android:title="@string/title_home" />
         <item
             android:id="@+id/nav_van_companies"
             android:icon="@drawable/ic_input_transport"
-            android:title="@string/menu_van_companies" />
+            android:title="@string/title_van_companies" />
         <item
             android:id="@+id/nav_contact"
             android:icon="@drawable/ic_menu_contact"
-            android:title="@string/menu_contact" />
+            android:title="@string/title_contact" />
         <item
             android:id="@+id/nav_about"
             android:icon="@drawable/ic_menu_about"
-            android:title="@string/menu_about" />
+            android:title="@string/title_about" />
     </group>
 
     <group
@@ -36,7 +32,7 @@
         <item
             android:id="@+id/btnLogout"
             android:icon="@drawable/ic_menu_logout"
-            android:title="@string/menu_logout" />
+            android:title="Sign Out" />
     </group>
 
 </menu>
