--- a/app/src/main/res/navigation/mobile_navigation_drawer.xml
+++ b/app/src/main/res/navigation/mobile_navigation_drawer.xml
@@ -7,19 +7,43 @@
 
     <fragment
         android:id="@+id/nav_home"
-        android:name="com.opustech.bookvan.ui.home.HomeFragment"
-        android:label="@string/menu_home"
+        android:name="com.opustech.bookvan.ui.fragments.HomeFragment"
+        android:label="@string/title_home"
         tools:layout="@layout/fragment_home" />
 
     <fragment
-        android:id="@+id/nav_schedules"
-        android:name="com.opustech.bookvan.ui.schedule.ScheduleFragment"
-        android:label="@string/menu_schedule"
-        tools:layout="@layout/fragment_schedule" />
+        android:id="@+id/nav_profile"
+        android:name="com.opustech.bookvan.ui.fragments.ProfileFragment"
+        android:label="@string/title_profile"
+        tools:layout="@layout/fragment_profile" />
+
+    <fragment
+        android:id="@+id/nav_van_companies"
+        android:name="com.opustech.bookvan.ui.fragments.VanCompanyFragment"
+        android:label="@string/title_van_companies"
+        tools:layout="@layout/fragment_van_companies" />
 
     <fragment
         android:id="@+id/nav_contact"
-        android:name="com.opustech.bookvan.ui.contact.ContactFragment"
-        android:label="@string/menu_contact"
+        android:name="com.opustech.bookvan.ui.fragments.ContactFragment"
+        android:label="@string/title_contact"
         tools:layout="@layout/fragment_contact" />
+
+    <fragment
+        android:id="@+id/nav_book"
+        android:name="com.opustech.bookvan.ui.fragments.BookFragment"
+        android:label="@string/title_book"
+        tools:layout="@layout/fragment_book" />
+
+    <fragment
+        android:id="@+id/nav_rent"
+        android:name="com.opustech.bookvan.ui.fragments.RentFragment"
+        android:label="@string/title_rent"
+        tools:layout="@layout/fragment_rent" />
+
+    <fragment
+        android:id="@+id/nav_schedule"
+        android:name="com.opustech.bookvan.ui.fragments.ScheduleFragment"
+        android:label="@string/title_schedule"
+        tools:layout="@layout/fragment_schedule" />
 </navigation>
